# Spark

./: .gitignore  README.md
source/extensions/spark.tasks/config/: extension.toml
source/extensions/spark.tasks/spark_tasks/g1_egovla/: __init__.py  g1_egovla_env_cfg.py
source/extensions/spark_tasks/: pyproject.toml
source/extensions/spark_tasks/spark_tasks/: __init__.py
source/extensions/spark_tasks/spark_tasks/g1_inspire_ego_benchmark/: __init__.py  g1_flip_mug_cfg.py  g1_insert_and_unload_cans_cfg.py  g1_insert_cans_cfg.py  g1_open_laptop_cfg.py  g1_pour_balls_cfg.py  g1_push_box_cfg.py  g1_sort_cans_cfg.py  g1_stack_can_cfg.py  g1_stack_can_into_drawer_cfg.py  g1_unload_cans_cfg.py  m2g_g1_close_drawer_cfg.py  object_table_env_cfg.py  open_laptop_g1_inspire.py
source/extensions/spark_tasks/spark_tasks/g1_inspire_ego_benchmark/mdp/: __init__.py  observations.py  pick_up_place.py  terminations.py
source/extensions/spark_tasks/spark_tasks/open_laptop/: __init__.py  open_laptop_g1_inspire.py
source/extensions/spark_tasks/spark_tasks/open_laptop/mdp/: __init__.py  observations.py  open_laptop_events.py  terminations.py
